--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">My Application</string>
+    <string name="edit_name">Enter your name</string>
+    <string name="button_send_name">Send</string>
 </resources>
