--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,7 @@
 <resources>
-    <string name="app_name">My Application</string>
+    <string name="app_name">Wizard</string>
     <string name="edit_name">Enter your name</string>
-    <string name="button_send_name">Send</string>
+    <string name="button_send">Send</string>
+    <string name="edit_address">Enter your address</string>
+    <string name="edit_birth">Enter your date of birth</string>
 </resources>
